[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "vnnlib"
dynamic = ["version"]
description = ""
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "David Shriver", email = "davidshriver@outlook.com" }]
keywords = []
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
requires-python = ">=3.7"
dependencies = ["numpy>=1.19"]

[project.urls]
Documentation = "https://github.com/dlshriver/vnnlib#readme"
Issues = "https://github.com/dlshriver/vnnlib/issues"
Source = "https://github.com/dlshriver/vnnlib"

[project.optional-dependencies]
dev = [
    "mypy~=1.0.0",
    "black~=23.1.0",
    "isort~=5.12.0",
    "coverage~=7.1.0",
    "pytest~=7.2.1",
]
lint = ["mypy~=1.0.0"]
style = ["black~=23.1.0", "isort~=5.12.0"]
test = ["coverage~=7.1.0", "pytest~=7.2.1"]
docs = ["furo~=2022.12.7", "sphinx~=6.1.3"]
dist = ["build", "twine"]

[tool.setuptools.dynamic]
version = { attr = "vnnlib.__version__.__version__" }

[tool.setuptools.packages.find]
include = ["vnnlib"]

[tool.coverage.run]
branch = true
command_line = "-m pytest"
parallel = true
source = ["vnnlib"]
omit = ["vnnlib/__main__.py"]

[tool.isort]
profile = "black"
src_paths = ["vnnlib", "test"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--ff --verbose --import-mode=importlib"
testpaths = ["tests"]
